Don't create main window on the stack

KMainWindow deletes on close, causing a crash on shutdown

BUG: 482499